# django_sample

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: github_action.yaml
apps/: pytest.ini
apps/auth/: serializers.py  urls.py  views.py
apps/bookmarks/: models.py  serializers.py  urls.py  views.py
apps/bookmarks/migrations/: 0001_initial.py  0002_initial.py
apps/django_sample/: asgi.py  settings.py  urls.py  wsgi.py
apps/django_sample/settings/: local.py
apps/django_sample/settings/base/: __init__.py  drf.py  jwt.py
apps/letters/: models.py  serializers.py  urls.py  views.py
apps/letters/migrations/: 0001_initial.py  0002_initial.py
apps/users/: models.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py
apps/utils/django/: models.py
apps/utils/drf/: viewsets.py
